# rust-rocket-api

./: .gitignore  Cargo.toml
src/: main.rs  test.rs
src/routes/: mod.rs  structs.rs
src/utils/: mod.rs
