cargo-features = ["edition2021"]

[package]
name = "rust-rocket-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version="0.4.10", features=["json"] }
rusqlite = { version="0.25.3", features=["bundled"] }
serde = { version="1.0.126", features=["derive"] }
serde_json = "1.0.64"
